cluster/apps/simplebookmarks-production/route.yaml
---
## Route going to oauth2-proxy service
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: simplebookmarks-production
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${SECRET_SIMPLEBOOKMARKS_DOMAIN}`)
      priority: 10
      services:
        - name: oauth2-proxy
          port: 80
  tls:
    secretName: tls-api
